--- a/overlay-aosp/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-aosp/frameworks/base/core/res/res/values/custom_config.xml
@@ -70,5 +70,5 @@
     <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/battery/fastchg_status</string>
  
     <!-- Whether to force enable multi resolution configuration for camera -->
-    <bool name="config_forceMultiResolution">true</bool>
+    <bool name="config_forceMultiResolution">false</bool>
 </resources>
